# NanaBetterCubism

./: .env.yarn  .gitignore  AGENTS.md  README.md  app.config.json  lilia.tools.profile.mjs  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.agents/skills/cubism-edit-transactions/: SKILL.md
.agents/skills/cubism-edit-transactions/agents/: openai.yaml
.agents/skills/cubism-editor-protocol/: SKILL.md
.agents/skills/cubism-editor-protocol/agents/: openai.yaml
.agents/skills/cubism-editor-protocol/references/: capability-matrix.md
.agents/skills/cubism-model-editing/: SKILL.md
.agents/skills/cubism-model-editing/agents/: openai.yaml
.agents/skills/lilia-agent-debug/: SKILL.md
.agents/skills/lilia-agent-debug/agents/: openai.yaml
.agents/skills/lilia-app-boundary/: SKILL.md
.agents/skills/lilia-app-boundary/agents/: openai.yaml
.agents/skills/lilia-app-coding/: SKILL.md
.agents/skills/lilia-app-coding/agents/: openai.yaml
.agents/skills/lilia-app-design/: SKILL.md
.agents/skills/lilia-app-design/agents/: openai.yaml
.agents/skills/lilia-app-git/: SKILL.md
.agents/skills/lilia-app-git/agents/: openai.yaml
.agents/skills/lilia-app-validation/: SKILL.md
.agents/skills/lilia-app-validation/agents/: openai.yaml
.agents/skills/nanabettercubism-app/: SKILL.md
.agents/skills/nanabettercubism-app/agents/: openai.yaml
.agents/skills/nanabettercubism-validation/: SKILL.md
.agents/skills/nanabettercubism-validation/agents/: openai.yaml
.github/workflows/: agent-pnpm-migrate.yml  ci.yml  pages.yml  release.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/guide/: development.md
scripts/: agent-debug-app.mjs  agent-debug-fallback.mjs  agent-debug.mjs  lilia-ui-deps.mjs
src/: AppRoot.vue  app.config.ts  app.ts  commands.ts  diagnostics.ts  main.ts  overlays.ts  routes.ts  runtime.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: domain.rs  lib.rs  main.rs  protocol.rs  service.rs
src-tauri/src/agent/: capture.rs  commands.rs  compaction.rs  images.rs  llm.rs  memory_markdown.rs  memory_recall.rs  mod.rs  plan.rs  prompt.txt  psd.rs  runtime.rs  skills.rs  store.rs  title.rs  tools.rs  user_action.rs
src-tauri/src/agent/computer_control/: mod.rs  windows.rs
src-tauri/src/agent/skills/computer-operation/: SKILL.md
src-tauri/src/agent/skills/editor-context/: SKILL.md
src-tauri/src/agent/skills/memory-recall/: SKILL.md
src-tauri/src/agent/skills/model-inspection/: SKILL.md
src-tauri/src/agent/skills/object-editing/: SKILL.md
src-tauri/src/agent/skills/parameter-editing/: SKILL.md
src-tauri/src/agent/skills/project-memory/: SKILL.md
src-tauri/src/agent/skills/psd-inspection/: SKILL.md
src-tauri/src/service/: commands.rs  credentials.rs  model_structure.rs  official_api.rs  part_parameters.rs  preview_store.rs  transaction.rs
src-tauri/src/service/official_api/: edit.rs  mod.rs  read.rs  schema.rs  tests.rs  transaction.rs  verification.rs
src/features/agent/: ChatHomePage.vue  ChatPage.vue  MemoryPage.vue  bridge.ts  chatDropPaths.ts  conversationPresentation.ts  conversationRuntimeStore.ts  conversationSearch.ts  externalLinks.ts  llmConfigStore.ts  memoryMarkdown.ts  memoryPresentation.ts  sidebarConversations.ts  toolActivityGroups.ts  types.ts  useChatImageDrafts.ts  useChatPsdDocuments.ts  useHomePsdDrafts.ts
src/features/agent/components/: ConversationComposer.vue  (+7 more)
src/features/editor/: EditorConnectionCard.vue  bridge.ts  editorStore.ts  types.ts
src/features/home/: HomePage.vue
src/features/parameters/: ParameterBatchPage.vue  bridge.ts  editorStore.ts  types.ts
src/features/part-parameters/: PartParametersPage.vue  bridge.ts  types.ts
src/features/shell/: AppRoot.vue  AppSidebar.vue  footerSelfCheck.ts
src/ui/: contract.ts  index.ts  preset.ts  shell-state.ts  styles.css
src/utils/: delimited.ts  storage.ts
tests/: chatDropPaths.test.ts  chatHomePsdDrafts.test.ts  chatImages.test.ts  chatPsdDocuments.test.ts  chatWorkspace.test.ts  conversationPresentation.test.ts  conversationSearch.test.ts  conversationSidebarTop.test.ts  editorStore.test.ts  llmConfigStore.test.ts  llmSettings.test.ts  memoryMarkdown.test.ts  memoryPage.test.ts  parameter-template.test.ts  part-parameters-page.test.ts  router.test.ts  setupTests.ts  sidebarConversations.test.ts  sidebarSurface.test.ts  toolActivityGroup.test.ts  tooling.test.ts
(+18 files in other folders)
