[package]
name = "nanabettercubism"
version = "0.1.0"
description = "Batch parameter tooling for Live2D Cubism Editor"
authors = ["sena-nana"]
edition = "2021"

[lib]
name = "nanabettercubism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3.32"
keyring = "4.1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-lilia = { git = "https://github.com/sena-nana/LiliaUI", rev = "ae776ecc7320cfa5b63d26a015e341cdeb9839e1" }
tauri-plugin-store = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.30.0"
uuid = { version = "1", features = ["v4"] }

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
incremental = false
