[package]
name = "nanabettercubism"
version = "0.1.0"
description = "Cubism Editor assistant agent"
authors = ["sena-nana"]
edition = "2021"

[lib]
name = "nanabettercubism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures-util = "0.3.32"
image = { version = "0.25", default-features = false, features = ["png"] }
keyring = "4.1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-lilia = { git = "https://github.com/sena-nana/LiliaUI", rev = "addf2eb878deae09c844f0fd473906dde5052060" }
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.30.0"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
debug = false
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
incremental = false
